--- a/OctagonPlatform/Views/Partners/Create.cshtml
+++ b/OctagonPlatform/Views/Partners/Create.cshtml
@@ -18,7 +18,7 @@
                     <strong>All fields are required.</strong>
                 
         @ViewBag.Error
-        @Html.ValidationSummary(false, "Please fix the fallowing errors!!!", new { @class = "text-danger" })
+        @Html.ValidationSummary(false, "", new { @class = "text-danger" })
         <p>
 
             <div class="row rowCreatePartner" style="width: 1100px">
@@ -108,17 +108,17 @@
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(m => m.WorkPhone)
-                            <i>@Html.TextBoxFor(m => m.WorkPhone, new { @class = "form-control", autofocus = "autofocus", placeholder = "+1 (305) 227 4187", id = "PlaceHolderForm" })</i>
+                            <i>@Html.TextBoxFor(m => m.WorkPhone, new { @class = "form-control phone", autofocus = "autofocus", placeholder = "+1 (305) 227 4187", id = "PlaceHolderForm" })</i>
                             @Html.ValidationMessageFor(m => m.WorkPhone)
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(m => m.Mobile)
-                            <i>@Html.TextBoxFor(m => m.Mobile, new { @class = "form-control", autofocus = "autofocus", placeholder = "+1 (305) 227 4187", id = "PlaceHolderForm" })</i>
+                            <i>@Html.TextBoxFor(m => m.Mobile, new { @class = "form-control phone", autofocus = "autofocus", placeholder = "+1 (305) 227 4187", id = "PlaceHolderForm" })</i>
                             @Html.ValidationMessageFor(m => m.Mobile)
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(m => m.Fax)
-                            <i>@Html.TextBoxFor(m => m.Fax, new { @class = "form-control", autofocus = "autofocus", placeholder = "+1 (305) 227 4187", id = "PlaceHolderForm" })</i>
+                            <i>@Html.TextBoxFor(m => m.Fax, new { @class = "form-control phone", autofocus = "autofocus", placeholder = "+1 (305) 227 4187", id = "PlaceHolderForm" })</i>
                             @Html.ValidationMessageFor(m => m.Fax)
                         </div>
                         <div class="form-group">
@@ -141,4 +141,8 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/xpopulate")
+    <script src="~/Octagon/assets/js/inputmask.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        $('.phone').mask('(999) 999-9999');
+    </script>
     }
