--- a/OctagonPlatform/Views/Partners/Index.cshtml
+++ b/OctagonPlatform/Views/Partners/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 
-<div class="container">
+<div class="container" style="padding-bottom: 20px">
     <h1 class="page-header">Partners</h1>
     @Html.ActionLink(
         linkText: "Add Partner",
