--- a/OctagonPlatform/Views/Terminals/Edit.cshtml
+++ b/OctagonPlatform/Views/Terminals/Edit.cshtml
@@ -68,9 +68,9 @@
                                 <select required id="CountryId" name="CountryId" class="form-control1">
                                     <option value="231">United States</option>
                                     @foreach (var item in Model.Countries)
-                                {
+                                    {
                                         <option value="@item.Id">@item.Name</option>
-                                }
+                                    }
                                 </select>
                                 @Html.ValidationMessageFor(m => m.CountryId)
                             </div>
@@ -84,9 +84,9 @@
                                 <select required id="StatesId" name="StateId" class="form-control1">
                                     <option value="3930">Florida</option>
                                     @foreach (var item in Model.States)
-                                {
+                                    {
                                         <option value="@item.Id">@item.Name</option>
-                                }
+                                    }
                                 </select>
                                 @Html.ValidationMessageFor(m => m.StateId)
                             </div>
@@ -100,9 +100,9 @@
                                 <select id="CitiesId" name="CityId" class="form-control1">
                                     <option value="43769">Miami</option>
                                     @foreach (var item in Model.Cities)
-                                {
+                                    {
                                         <option value="@item.Id">@item.Name</option>
-                                }
+                                    }
                                 </select>
                                 @Html.ValidationMessageFor(m => m.CityId)
                             </div>
@@ -146,18 +146,18 @@
                             @Html.TextBoxFor(m => m.EmvReady, new { @class = "form-control1", autofocus = "autofocus", id = "PlaceHolderForm" })
                             @Html.ValidationMessageFor(m => m.EmvReady)
                         </div>
-                    </div> 
+                    </div>
                     <div class="form-group">
                         @Html.LabelFor(m => m.MachineSerialNumber, new { @class = "col-lg-2 control-label" })
                         <div class="col-lg-10">
-                            @Html.TextBoxFor(m => m.MachineSerialNumber, new { @class = "form-control1", autofocus = "autofocus", placeholder = "1117060030", id = "PlaceHolderForm" })
+                            @Html.TextBoxFor(m => m.MachineSerialNumber, new { @class = "form-control1", autofocus = "autofocus", placeholder = "Serial Number, example: 1117060030", id = "PlaceHolderForm" })
                             @Html.ValidationMessageFor(m => m.MachineSerialNumber)
                         </div>
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(m => m.VeppSerialNumber, new { @class = "col-lg-2 control-label" })
                         <div class="col-lg-10">
-                            @Html.TextBoxFor(m => m.VeppSerialNumber, new { @class = "form-control1", autofocus = "autofocus", placeholder = "1117060030", id = "PlaceHolderForm" })
+                            @Html.TextBoxFor(m => m.VeppSerialNumber, new { @class = "form-control1", autofocus = "autofocus", placeholder = "Veep Serial Number, example: 1117060030", id = "PlaceHolderForm" })
                             @Html.ValidationMessageFor(m => m.VeppSerialNumber)
                         </div>
                     </div>
@@ -178,79 +178,79 @@
 
                 </div>
 
-                    <div class="col-md-4">
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.BankAccountId, new { @class = "col-lg-2 control-label" })
-                            <div class="col-lg-10">
-                                @Html.DropDownListFor(m => m.BankAccountId, new SelectList(Model.BankAccounts, "Id", "NickName"), "", new { @class = "form-control1" })
-                                @Html.ValidationMessageFor(m => m.BankAccountId)
-                            </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.BankAccountId, new { @class = "col-lg-2 control-label" })
+                        <div class="col-lg-10">
+                            @Html.DropDownListFor(m => m.BankAccountId, new SelectList(Model.BankAccounts, "Id", "NickName"), "", new { @class = "form-control1" })
+                            @Html.ValidationMessageFor(m => m.BankAccountId)
                         </div>
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.SurchargeAmountFee, new { @class = "col-lg-2 control-label" })
-                            <div class="col-lg-10">
-                                @Html.TextBoxFor(m => m.SurchargeAmountFee, new { @class = "form-control1", autofocus = "autofocus", placeholder = "", id = "PlaceHolderForm" })
-                                @Html.ValidationMessageFor(m => m.SurchargeAmountFee)
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.SurchargeAmountFee, new { @class = "col-lg-2 control-label" })
+                        <div class="col-lg-10">
+                            @Html.TextBoxFor(m => m.SurchargeAmountFee, new { @class = "form-control1", autofocus = "autofocus", placeholder = "Surcharge AMOUNT Fee Per Transaction", id = "PlaceHolderForm" })
+                            @Html.ValidationMessageFor(m => m.SurchargeAmountFee)
                         </div>
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.SurchargePercentageFee, new { @class = "col-lg-2 control-label" })
-                            <div class="col-lg-10">
-                                @Html.TextBoxFor(m => m.SurchargePercentageFee, new { @class = "form-control1", autofocus = "autofocus", placeholder = "%", id = "PlaceHolderForm" })
-                                @Html.ValidationMessageFor(m => m.SurchargePercentageFee)
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.SurchargePercentageFee, new { @class = "col-lg-2 control-label" })
+                        <div class="col-lg-10">
+                            @Html.TextBoxFor(m => m.SurchargePercentageFee, new { @class = "form-control1", autofocus = "autofocus", placeholder = "Surchage PERCENTAGE Fee per transaction", id = "PlaceHolderForm" })
+                            @Html.ValidationMessageFor(m => m.SurchargePercentageFee)
                         </div>
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.SurchargeType, new { @class = "col-lg-2 control-label" })
-                            <div class="col-lg-10">
-                                @Html.EnumDropDownListFor(m => m.SurchargeType, "", new { @class = "form-control1" })
-                                @Html.ValidationMessageFor(m => m.SurchargeType)
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.SurchargeType, new { @class = "col-lg-2 control-label" })
+                        <div class="col-lg-10">
+                            @Html.EnumDropDownListFor(m => m.SurchargeType, "", new { @class = "form-control1" })
+                            @Html.ValidationMessageFor(m => m.SurchargeType)
                         </div>
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.WhoInitiates, new { @class = "col-lg-2 control-label" })
-                            <div class="col-lg-10">
-                                @Html.EnumDropDownListFor(m => m.WhoInitiates, "", new { @class = "form-control1" })
-                                @Html.ValidationMessageFor(m => m.WhoInitiates)
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.WhoInitiates, new { @class = "col-lg-2 control-label" })
+                        <div class="col-lg-10">
+                            @Html.EnumDropDownListFor(m => m.WhoInitiates, "", new { @class = "form-control1" })
+                            @Html.ValidationMessageFor(m => m.WhoInitiates)
                         </div>
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.CryptoPercentChargeAmount, new { @class = "col-lg-2 control-label" })
-                            <div class="col-lg-10">
-                                @Html.TextBoxFor(m => m.CryptoPercentChargeAmount, new { @class = "form-control1", autofocus = "autofocus", placeholder = "4.99", id = "PlaceHolderForm" })
-                                @Html.ValidationMessageFor(m => m.CryptoPercentChargeAmount)
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.CryptoPercentChargeAmount, new { @class = "col-lg-2 control-label" })
+                        <div class="col-lg-10">
+                            @Html.TextBoxFor(m => m.CryptoPercentChargeAmount, new { @class = "form-control1", autofocus = "autofocus", placeholder = "Cryptocurrency Percent Fee", id = "PlaceHolderForm" })
+                            @Html.ValidationMessageFor(m => m.CryptoPercentChargeAmount)
                         </div>
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.InstalledDate, new { @class = "col-lg-2 control-label" })
-                            <div class="col-lg-10">
-                                @Html.TextBoxFor(m => m.InstalledDate, "{0:d MMM yyyy}", new { @class = "form-control1", autofocus = "autofocus", placeholder = "1 Jan 2000", @type = "date", id = "PlaceHolderForm" })
-                                @Html.ValidationMessageFor(m => m.InstalledDate)
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.InstalledDate, new { @class = "col-lg-2 control-label" })
+                        <div class="col-lg-10">
+                            @Html.TextBoxFor(m => m.InstalledDate, "{0:d MMM yyyy}", new { @class = "form-control1", autofocus = "autofocus", placeholder = "1 Jan 2000", @type = "date", id = "PlaceHolderForm" })
+                            @Html.ValidationMessageFor(m => m.InstalledDate)
                         </div>
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.LoadedBy, new { @class = "col-lg-2 control-label" })
-                            <div class="col-lg-10">
-                                @Html.TextBoxFor(m => m.LoadedBy, new { @class = "form-control1", autofocus = "autofocus", placeholder = "Leo", id = "PlaceHolderForm" })
-                                @Html.ValidationMessageFor(m => m.LoadedBy)
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.LoadedBy, new { @class = "col-lg-2 control-label" })
+                        <div class="col-lg-10">
+                            @Html.TextBoxFor(m => m.LoadedBy, new { @class = "form-control1", autofocus = "autofocus", placeholder = "Leo", id = "PlaceHolderForm" })
+                            @Html.ValidationMessageFor(m => m.LoadedBy)
                         </div>
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.Balance, new { @class = "col-lg-2 control-label" })
-                            <div class="col-lg-10">
-                                @Html.TextBoxFor(m => m.Balance, new { @class = "form-control1", autofocus = "autofocus", placeholder = "1500", id = "PlaceHolderForm" })
-                                @Html.ValidationMessageFor(m => m.Balance)
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.Balance, new { @class = "col-lg-2 control-label" })
+                        <div class="col-lg-10">
+                            @Html.TextBoxFor(m => m.Balance, new { @class = "form-control1", autofocus = "autofocus", placeholder = "1500", id = "PlaceHolderForm" })
+                            @Html.ValidationMessageFor(m => m.Balance)
                         </div>
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.MinAmmountCash, new { @class = "col-lg-2 control-label" })
-                            <div class="col-lg-10">
-                                @Html.TextBoxFor(m => m.MinAmmountCash, new { @class = "form-control1", autofocus = "autofocus", placeholder = "300", id = "PlaceHolderForm" })
-                                @Html.ValidationMessageFor(m => m.MinAmmountCash)
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.MinAmmountCash, new { @class = "col-lg-2 control-label" })
+                        <div class="col-lg-10">
+                            @Html.TextBoxFor(m => m.MinAmmountCash, new { @class = "form-control1", autofocus = "autofocus", placeholder = "Minimum Cash Balance", id = "PlaceHolderForm" })
+                            @Html.ValidationMessageFor(m => m.MinAmmountCash)
                         </div>
                     </div>
                 </div>
+            </div>
 
         </div>
 
