--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -6,7 +6,7 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
 }
-<div class="container">
+<div class="container" style="padding-bottom: 20px">
     <div class="buttonterminal">
         <h1 class="page-header">Terminals</h1>
         @Html.ActionLink(
