actualizado el bind key

--- a/OctagonPlatform/Views/Terminals/Sections/BindKey.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/BindKey.cshtml
@@ -38,19 +38,19 @@
                 @Html.Label(Model.Serial1)
             </td>
             <td>Check Digit 1:</td>
-            <td>@ViewBag.ChkDigt1</td>
+            <td>@Model.CheckDigt1</td>
         </tr>
         <tr>
             <td>Serial number 2:</td>
             <td>@Html.Label(Model.Serial2)</td>
             <td>Check Digit 2:</td>
-            <td>@ViewBag.ChkDigt2</td>
+            <td>@Model.CheckDigt2</td>
         </tr>
         <tr>
             <td>Encripytion Type</td>
             <td>Triple DES</td>
             <td>ATM Check Digit</td>
-            <td>@ViewBag.AtmChkDigt</td>
+            <td>@Model.ATMCheckDigt</td>
         </tr>
 
         <tr>
