--- a/OctagonPlatform/Views/Dashboard/Index.cshtml
+++ b/OctagonPlatform/Views/Dashboard/Index.cshtml
@@ -8,6 +8,11 @@
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">Dashboard</h1>
+            <a href="https://www.accuweather.com/en/us/miami-fl/33128/weather-forecast/347936" class="aw-widget-legal">
+                <!--
+                By accessing and/or using this code snippet, you agree to AccuWeather’s terms and conditions (in English) which can be found at https://www.accuweather.com/en/free-weather-widgets/terms and AccuWeather’s Privacy Statement (in English) which can be found at https://www.accuweather.com/en/privacy.
+                -->
+            </a><div id="awcc1509746984215" class="aw-widget-current"  data-locationkey="347936" data-unit="f" data-language="en-us" data-useip="false" data-uid="awcc1509746984215"></div><script type="text/javascript" src="https://oap.accuweather.com/launch.js"></script>
         </div>
         <!-- /.col-lg-12 -->
     </div>
