--- a/OctagonPlatform/Views/Users/Create.cshtml
+++ b/OctagonPlatform/Views/Users/Create.cshtml
@@ -2,77 +2,78 @@
 
 @{
     ViewBag.Title = "Add User";
-    Layout = "~/Views/Shared/_LayoutAdminSB.cshtml";
+    Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
 }
-<h3 class="alert-info">Create User</h3>
-@using (Html.BeginForm("Create", "Users"))
-{
-    <p class="alert alert-danger">
-        All fields are <strong>required.</strong>
-        @ViewBag.Error
-        @Html.ValidationSummary(false, "Please fix the fallowing errors!!!", new { @class = "text-danger" })
-    </p>
-    if (!string.IsNullOrEmpty(Model.Error))
+<div class="container" style="padding-bottom: 20px; padding-top: 20px;">
+    <h3 class="alert-info">Create User</h3>
+    @using (Html.BeginForm("Create", "Users"))
     {
-        <div class="alert alert-danger">
-            @Model.Error.ToString()
-        </div>
-    }
+        <p class="alert alert-danger">
+            All fields are <strong>required.</strong>
+            @ViewBag.Error
+            @Html.ValidationSummary(false, "Please fix the fallowing errors!!!", new { @class = "text-danger" })
+        </p>
+        if (!string.IsNullOrEmpty(Model.Error))
+        {
+            <div class="alert alert-danger">
+                @Model.Error.ToString()
+            </div>
+        }
 
-    @Html.AntiForgeryToken()
-    <div class="form-group">
-        @Html.LabelFor(m => m.UserName)
-        @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", autofocus = "autofocus" })
-        @Html.ValidationMessageFor(m => m.UserName)
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Status)
-        @Html.EnumDropDownListFor(m => m.Status, "", new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.Status)
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Name)
-        @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.Name)
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.LastName)
-        @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", autofocus = "autofocus" })
-        @Html.ValidationMessageFor(m => m.LastName)
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email)
-        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", autofocus = "autofocus" })
-        @Html.ValidationMessageFor(m => m.Email)
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Phone)
-        @Html.TextBoxFor(m => m.Phone, new { @class = "form-control", autofocus = "autofocus" })
-        @Html.ValidationMessageFor(m => m.Phone)
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.PartnerId)
-        @Html.DropDownListFor(m => m.PartnerId, new SelectList(Model.Partners, "Id", "BusinessName"), "", new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.PartnerId)
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password)
-        @Html.PasswordFor(m => m.Password, new { @class = "form-control", autofocus = "autofocus" })
-        @Html.ValidationMessageFor(m => m.Password)
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword)
-        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", autofocus = "autofocus" })
-        @Html.ValidationMessageFor(m => m.ConfirmPassword)
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.IsLocked)
-        @Html.CheckBoxFor(m => m.IsLocked, new { @class = "form-control", autofocus = "autofocus" })
-        @Html.ValidationMessageFor(m => m.IsLocked)
-    </div>
+        @Html.AntiForgeryToken()
+        <div class="form-group">
+            @Html.LabelFor(m => m.UserName)
+            @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", autofocus = "autofocus" })
+            @Html.ValidationMessageFor(m => m.UserName)
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Status)
+            @Html.EnumDropDownListFor(m => m.Status, "", new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Status)
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Name)
+            @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.Name)
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.LastName)
+            @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", autofocus = "autofocus" })
+            @Html.ValidationMessageFor(m => m.LastName)
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Email)
+            @Html.TextBoxFor(m => m.Email, new { @class = "form-control", autofocus = "autofocus" })
+            @Html.ValidationMessageFor(m => m.Email)
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Phone)
+            @Html.TextBoxFor(m => m.Phone, new { @class = "form-control", autofocus = "autofocus" })
+            @Html.ValidationMessageFor(m => m.Phone)
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.PartnerId)
+            @Html.DropDownListFor(m => m.PartnerId, new SelectList(Model.Partners, "Id", "BusinessName"), "", new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.PartnerId)
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Password)
+            @Html.PasswordFor(m => m.Password, new { @class = "form-control", autofocus = "autofocus" })
+            @Html.ValidationMessageFor(m => m.Password)
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.ConfirmPassword)
+            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", autofocus = "autofocus" })
+            @Html.ValidationMessageFor(m => m.ConfirmPassword)
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.IsLocked)
+            @Html.CheckBoxFor(m => m.IsLocked, new { @class = "form-control", autofocus = "autofocus" })
+            @Html.ValidationMessageFor(m => m.IsLocked)
+        </div>
    
-    <table class="table table-striped table-hover ">
-        <thead>
+        <table class="table table-striped table-hover ">
+            <thead>
             <tr>
                 <th>SetOf</th>
                 <th>All</th>
@@ -81,8 +82,8 @@
                 <th>Edit</th>
                 <th>Delete</th>
             </tr>
-        </thead>
-        <tbody>
+            </thead>
+            <tbody>
             @foreach (var item in Model.SetOfPermissions)
             {
                 <tr>
@@ -100,14 +101,16 @@
                 </tr>
             }
 
-    </table>
-    <div class="form-group">
-        <div class="col-lg-10 col-lg-offset-2">
-            <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
-            <button type="submit" class="btn btn-primary">Save</button>
+        </table>
+        <div class="form-group">
+            <div class="col-lg-10 col-lg-offset-2">
+                <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
+                <button type="submit" class="btn btn-primary">Save</button>
+            </div>
         </div>
-    </div>
-}
+    }
+</div>
+
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
