--- a/OctagonPlatform/Views/Dashboard/Index.cshtml
+++ b/OctagonPlatform/Views/Dashboard/Index.cshtml
@@ -12,7 +12,7 @@
                 <!--
                 By accessing and/or using this code snippet, you agree to AccuWeather’s terms and conditions (in English) which can be found at https://www.accuweather.com/en/free-weather-widgets/terms and AccuWeather’s Privacy Statement (in English) which can be found at https://www.accuweather.com/en/privacy.
                 -->
-            </a><div id="awcc1509746984215" class="aw-widget-current"  data-locationkey="347936" data-unit="f" data-language="en-us" data-useip="false" data-uid="awcc1509746984215"></div><script type="text/javascript" src="https://oap.accuweather.com/launch.js"></script>
+            </a><div id="awcc1509984809514" class="aw-widget-current"  data-locationkey="" data-unit="f" data-language="en-us" data-useip="true" data-uid="awcc1509984809514"></div><script type="text/javascript" src="https://oap.accuweather.com/launch.js"></script>
         </div>
         <!-- /.col-lg-12 -->
     </div>
