Deleted error message, edited octagon css

--- a/OctagonPlatform/Views/Partners/Create.cshtml
+++ b/OctagonPlatform/Views/Partners/Create.cshtml
@@ -14,44 +14,44 @@
     {
         @Html.AntiForgeryToken()
         <div class="form-group">
-            <p class="alert alert-warning">
-                    <strong>All fields are required.</strong>
-                
-        @ViewBag.Error
-        @Html.ValidationSummary(false, "", new { @class = "text-danger" })
-        <p>
+            <p>
+            <!--<strong>All fields are required.</strong>-->
+
+            @ViewBag.Error
+            @Html.ValidationSummary(false, "", new {@class = "text-danger"})
+            <p>
 
             <div class="row rowCreatePartner" style="width: 1100px">
-                 <div class="col-md-4">
+                <div class="col-md-4">
 
                     <div class="form-group">
                         @Html.LabelFor(m => m.BusinessName)
-                        <i>@Html.TextBoxFor(m => m.BusinessName, new { @class = "form-control", autofocus = "autofocus", placeholder = "Company's Name", id = "PlaceHolderForm" })</i>
+                        <i>@Html.TextBoxFor(m => m.BusinessName, new {@class = "form-control", autofocus = "autofocus", placeholder = "Company's Name", id = "PlaceHolderForm"})</i>
                         @Html.ValidationMessageFor(m => m.BusinessName)
-                        
+
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(m => m.ParentId)
-                        @Html.DropDownListFor(m => m.ParentId, new SelectList(Model.Parents, "Id", "BusinessName"), "", new { @class = "form-control" })
+                        @Html.DropDownListFor(m => m.ParentId, new SelectList(Model.Parents, "Id", "BusinessName"), "", new {@class = "form-control"})
                         @Html.ValidationMessageFor(m => m.ParentId)
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(m => m.Status)
-                        @Html.EnumDropDownListFor(m => m.Status, "", new { @class = "form-control" })
+                        @Html.EnumDropDownListFor(m => m.Status, "", new {@class = "form-control"})
                         @Html.ValidationMessageFor(m => m.Status)
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(m => m.Address1)
-                        <i>@Html.TextBoxFor(m => m.Address1, new { @class = "form-control", placeholder = "124 SW 105 Ave", id = "PlaceHolderForm" })</i>
+                        <i>@Html.TextBoxFor(m => m.Address1, new {@class = "form-control", placeholder = "124 SW 105 Ave", id = "PlaceHolderForm"})</i>
                         @Html.ValidationMessageFor(m => m.Address1)
                     </div>
-                    
-                  </div>
 
-                 <div class="col-md-4">
+                </div>
+
+                <div class="col-md-4">
                     <div class="form-group">
                         @Html.LabelFor(m => m.Address2)
-                        <i>@Html.TextBoxFor(m => m.Address2, new { @class = "form-control", autofocus = "autofocus", placeholder = "Apto 203, 33181", id = "PlaceHolderForm" })</i>
+                        <i>@Html.TextBoxFor(m => m.Address2, new {@class = "form-control", autofocus = "autofocus", placeholder = "Apto 203, 33181", id = "PlaceHolderForm"})</i>
                         @Html.ValidationMessageFor(m => m.Address2)
                     </div>
                     <div class="form-group">
@@ -60,14 +60,16 @@
                             <select required id="CountryId" name="CountryId" class="form-control">
                                 <option value="231">United States</option>
                                 @foreach (var item in Model.Countries)
-                {
+                                {
                                     <option value="@item.Id">@item.Name</option>
                                 }
                             </select>
                             @Html.ValidationMessageFor(m => m.CountryId)
 
                         </div>
-                        <div><img id="loading" style="display:none" src="~/Content/loading_icon.gif" alt="" /></div>
+                        <div>
+                            <img id="loading" style="display: none" src="~/Content/loading_icon.gif" alt=""/>
+                        </div>
                     </div>
                     <div class="form-group">
                         <div id="States">
@@ -75,14 +77,16 @@
                             <select required id="StatesId" name="StateId" class="form-control">
                                 <option value="3930">Florida</option>
                                 @foreach (var item in Model.States)
-                {
+                                {
                                     <option value="@item.Id">@item.Name</option>
-                    }
+                                }
                             </select>
                             @Html.ValidationMessageFor(m => m.StateId)
 
                         </div>
-                        <div><img id="loading" style="display:none" src="~/Content/loading_icon.gif" alt="" /></div>
+                        <div>
+                            <img id="loading" style="display: none" src="~/Content/loading_icon.gif" alt=""/>
+                        </div>
                     </div>
                     <div class="form-group">
                         <div id="Cities">
@@ -90,51 +94,51 @@
                             <select id="CitiesId" name="CityId" class="form-control">
                                 <option value="43769">Miami</option>
                                 @foreach (var item in Model.Cities)
-                    {
+                                {
                                     <option value="@item.Id">@item.Name</option>
-                    }
+                                }
                             </select>
                             @Html.ValidationMessageFor(m => m.CityId)
                         </div>
-                        <div><img id="loading" style="display:none" src="~/Content/loading_icon.gif" alt="" /></div>
+                        <div>
+                            <img id="loading" style="display: none" src="~/Content/loading_icon.gif" alt=""/>
+                        </div>
                     </div>
-                       </div>
+                </div>
 
-                    <div class="col-md-4">
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.Email)
-                            <i>@Html.TextBoxFor(m => m.Email, new { @class = "form-control", autofocus = "autofocus", placeholder = "test@email.com", id = "PlaceHolderForm" })</i>
-                            @Html.ValidationMessageFor(m => m.Email)
-                        </div>
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.WorkPhone)
-                            <i>@Html.TextBoxFor(m => m.WorkPhone, new { @class = "form-control phone", autofocus = "autofocus", placeholder = "+1 (305) 227 4187", id = "PlaceHolderForm" })</i>
-                            @Html.ValidationMessageFor(m => m.WorkPhone)
-                        </div>
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.Mobile)
-                            <i>@Html.TextBoxFor(m => m.Mobile, new { @class = "form-control phone", autofocus = "autofocus", placeholder = "+1 (305) 227 4187", id = "PlaceHolderForm" })</i>
-                            @Html.ValidationMessageFor(m => m.Mobile)
-                        </div>
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.Fax)
-                            <i>@Html.TextBoxFor(m => m.Fax, new { @class = "form-control phone", autofocus = "autofocus", placeholder = "+1 (305) 227 4187", id = "PlaceHolderForm" })</i>
-                            @Html.ValidationMessageFor(m => m.Fax)
-                        </div>
-                        <div class="form-group">
-                            @Html.LabelFor(m => m.WebSite)
-                            <i>@Html.TextBoxFor(m => m.WebSite, new { @class = "form-control", autofocus = "autofocus", placeholder = "wwww.website.com", id = "PlaceHolderForm" })</i>
-                            @Html.ValidationMessageFor(m => m.WebSite)
-                        </div>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.Email)
+                        <i>@Html.TextBoxFor(m => m.Email, new {@class = "form-control", autofocus = "autofocus", placeholder = "test@email.com", id = "PlaceHolderForm"})</i>
+                        @Html.ValidationMessageFor(m => m.Email)
                     </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.WorkPhone)
+                        <i>@Html.TextBoxFor(m => m.WorkPhone, new {@class = "form-control phone", autofocus = "autofocus", placeholder = "+1 (305) 227 4187", id = "PlaceHolderForm"})</i>
+                        @Html.ValidationMessageFor(m => m.WorkPhone)
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.Mobile)
+                        <i>@Html.TextBoxFor(m => m.Mobile, new {@class = "form-control phone", autofocus = "autofocus", placeholder = "+1 (305) 227 4187", id = "PlaceHolderForm"})</i>
+                        @Html.ValidationMessageFor(m => m.Mobile)
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.Fax)
+                        <i>@Html.TextBoxFor(m => m.Fax, new {@class = "form-control phone", autofocus = "autofocus", placeholder = "+1 (305) 227 4187", id = "PlaceHolderForm"})</i>
+                        @Html.ValidationMessageFor(m => m.Fax)
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.WebSite)
+                        <i>@Html.TextBoxFor(m => m.WebSite, new {@class = "form-control", autofocus = "autofocus", placeholder = "wwww.website.com", id = "PlaceHolderForm"})</i>
+                        @Html.ValidationMessageFor(m => m.WebSite)
+                    </div>
+                </div>
             </div>
-            </div>
-        <div style="padding-bottom: 20px">      
-                <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
-                <button type="submit" class="btn btn-primary">Save</button>            
         </div>
-       
-
+        <div style="padding-bottom: 20px">
+            <button type="reset" onclick="history.back();" class="btn btn-default">Cancel</button>
+            <button type="submit" class="btn btn-primary">Save</button>
+        </div>
     }
 </div>
 
@@ -145,4 +149,4 @@
     <script type="text/javascript">
         $('.phone').mask('(999) 999-9999');
     </script>
-    }
+}
