--- a/OctagonPlatform/Octagon/assets/css/Dashboard.css
+++ b/OctagonPlatform/Octagon/assets/css/Dashboard.css
@@ -165,6 +165,7 @@ a {
     transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
 
+
 .phone {
     width: 80%;
     display: block;
@@ -184,6 +185,15 @@ a {
     transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
 
+
+.input-validation-error {
+    border: 2px solid red;
+}
+
+.field-validation-error {
+    color: red;
+    font-style: italic;
+}
 
 .h-100 {
     height: 95px !important;
