--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -8,7 +8,7 @@
 }
 <div class="container" style="padding-bottom: 20px">
     <div class="buttonterminal">
-        <h1 class="page-header">Terminals</h1>
+        <h1 class="page-header" style="color: #859298; font-size:30px;"> <i class="fa fa-desktop" style="font-size:25px;color:#859298"></i> Terminals</h1>
         @Html.ActionLink(
             linkText: "Add Terminal",
             actionName: "Create",
