--- a/OctagonPlatform/Views/Partners/Index.cshtml
+++ b/OctagonPlatform/Views/Partners/Index.cshtml
@@ -7,7 +7,7 @@
 
 
 <div class="container" style="padding-bottom: 20px">
-    <h1 class="page-header">Partners</h1>
+    <h1 class="page-header"style="color: #859298; font-size:30px;"> <i class="fa fa-group" style="font-size:25px;color:#859298"></i> Partners</h1>
     @Html.ActionLink(
         "Add Partner",
         "Create",
