--- a/OctagonPlatform/Views/Partners/Create.cshtml
+++ b/OctagonPlatform/Views/Partners/Create.cshtml
@@ -1,6 +1,4 @@
-﻿@using Microsoft.VisualStudio.Text.UI.Commanding.Commands
-@model OctagonPlatform.Models.FormsViewModels.PartnerFormViewModel
-
+﻿@model OctagonPlatform.Models.FormsViewModels.PartnerFormViewModel
 
 @{
     ViewBag.Title = "Create";
