update create terminal

--- a/OctagonPlatform/Octagon/assets/css/Dashboard.css
+++ b/OctagonPlatform/Octagon/assets/css/Dashboard.css
@@ -9,6 +9,18 @@
     margin-left: 50px;
 }
 
+.terminalsAdd {
+    width: 50%;
+    float: none;
+    margin-left: 50px;
+}
+
+.mama {
+    width: 1100px;
+    margin-left: 15px;
+}
+
+
 .delete {
     width: 50%;
    }
