--- a/OctagonPlatform/Views/Error/NotFoundError.cshtml
+++ b/OctagonPlatform/Views/Error/NotFoundError.cshtml
@@ -1,10 +1,11 @@
 ﻿@{
-    ViewBag.Title = "Error";
+    ViewBag.Title = "NotFoundError";
     Layout = "~/Views/Shared/_LayoutDashboard.cshtml";
 }
 <div class="container" style="text-align: center; padding-bottom: 20px; padding-top: 20px"></div>
 <div class="form-group">
-    <h1>Unknown Error</h1>
+    <h1>404</h1>
+    <h2>The page you're looking for doesn't exist.</h2>
     <h2 class="alert-danger">@ViewBag.Error </h2>
 </div>
 <div class="form-group">
