--- a/OctagonPlatform/Views/Partners/Index.cshtml
+++ b/OctagonPlatform/Views/Partners/Index.cshtml
@@ -42,7 +42,7 @@
         </thead>
         <tbody>
         <tr>
-            <td>@Html.ActionLink(Model.BusinessName, "Details", "Partners", new {id = Model.Id})</td>
+            <td>@Html.ActionLink(Model.BusinessName, "Details", routeValues: new {id = Model.Id})</td>
             <td>@Model.Parent.BusinessName</td>
             <td>@Model.Address1</td>
             <td>@Model.Mobile</td>
@@ -58,7 +58,7 @@
             if (!item.Deleted && item.Id != Model.Id)
             {
                 <tr>
-                    <td>@Html.ActionLink(item.BusinessName, "Details", new {id = item.Id})</td>
+                    <td>@Html.ActionLink(item.BusinessName, "Details", routeValues:new {item.Id})</td>
                     <td>@item.Parent.BusinessName</td>
                     <td>@item.Address1</td>
                     <td>@item.Mobile</td>
