Updated Bootstrap style

--- a/OctagonPlatform/Views/Terminals/Index.cshtml
+++ b/OctagonPlatform/Views/Terminals/Index.cshtml
@@ -16,7 +16,7 @@
             {
                 partnerId = int.Parse(Session["partnerId"].ToString())
             },
-            htmlAttributes: new {@class= "btn btn-primary", style = "background-color: #00a8e1; border-color: #00a8e1" }
+            htmlAttributes: new {@class= "btn btn-primary"}
             )
     </div>
     <br>
