--- a/OctagonPlatform/Views/Partners/Index.cshtml
+++ b/OctagonPlatform/Views/Partners/Index.cshtml
@@ -25,9 +25,9 @@
             <strong>@ViewBag.Error</strong>
         </h3>
     </div>
-    <table id="partners" class="table table-striped table-bordered">
+    <table id="partners" class="table table-striped table-hover table-bordered">
 
-        <thead>
+        <thead class="thead-blue">
         <tr>
 
             <th>Business Name</th>
